deploy/acs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aigc
  namespace: aigc
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "true"
    alb.ingress.kubernetes.io/order: "1"
    alb.ingress.kubernetes.io/healthcheck-enabled: "true"
    alb.ingress.kubernetes.io/healthcheck-path: /api/health
    alb.ingress.kubernetes.io/healthcheck-method: GET
spec:
  ingressClassName: alb
  tls:
    - hosts: [aigc.juxplay.com]
      secretName: aigc-tls
  rules:
    - host: aigc.juxplay.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aigc
                port:
                  number: 3000
